# quick-os

./: .gitignore  Cargo.toml  LOG.md  README.md  REVIEW.md
.cursor/rules/: diagrams-mobile.mdc
.github/workflows/: ci.yml
configs/: quick-os.toml
crates/agent-os/: Cargo.toml
crates/agent-os/src/: lib.rs  main.rs  primitives.rs  runtime.rs  workspace.rs
crates/quick-os/: Cargo.toml
crates/quick-os-core/: Cargo.toml
crates/quick-os-core/src/: agent.rs  config.rs  error.rs  guest_protocol.rs  lib.rs  snapshot.rs
crates/quick-os-dispatcher/: Cargo.toml
crates/quick-os-dispatcher/src/: dispatcher.rs
crates/quick-os-firecracker/: Cargo.toml
crates/quick-os-firecracker/src/: client.rs  env.rs  lib.rs  vm.rs
crates/quick-os-tools/: Cargo.toml
crates/quick-os-tools/src/: lib.rs  observe.rs  registry.rs  server.rs
crates/quick-os-tools/tests/: http_smoke.rs
crates/quick-os/src/: main.rs
docker/: Dockerfile.dev  docker-compose.yml
docs/: ARCHITECTURE.md  CONNECTIONS.md  DIAGRAMS.md  MOBILE.md  PATTERNS.md  REFACTOR-PLAN.md  RUST-CONCEPTS.md  RWLOCK.md  VISION.md  demo-output.txt
docs/mermaid/: current-connections.mmd  layered-architecture.mmd  rust-traits-vs-python.mmd  rwlock-concurrency.mmd  rwlock-states.mmd  target-with-traits.mmd
scripts/: demo-agent-os.sh  demo-ci.sh  render-diagrams.sh  setup-dev.sh
src/: main.rs
