[workspace]
members = [
    "crates/agent-os",
    "crates/quick-os-core",
    "crates/quick-os-firecracker",
    "crates/quick-os-dispatcher",
    "crates/quick-os-tools",
    "crates/quick-os",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["json"] }
bytes = "1"
clap = { version = "=4.5.42", features = ["derive"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio"] }
hyperlocal = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "=1.11.0", features = ["v4", "serde"] }

quick-os-core = { path = "crates/quick-os-core" }
agent-os = { path = "crates/agent-os" }
quick-os-dispatcher = { path = "crates/quick-os-dispatcher" }
quick-os-firecracker = { path = "crates/quick-os-firecracker" }
quick-os-tools = { path = "crates/quick-os-tools" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
allow_attributes = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
struct_excessive_bools = "allow"
