[package]
name = "agent-os"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lightweight agent operating environment (guest runtime)"

[[bin]]
name = "agent-os"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
quick-os-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3"
